syntax = "proto3";

package auth;

option go_package = "/auth";

service AuthService {
    rpc DeliverTokenByRPC(DeliverTokenReq) returns (DeliveryResp) {}
    rpc VerifyTokenByRPC(VerifyTokenReq) returns (VerifyResp) {}
}

message DeliverTokenReq {
    int32 user_id = 1;  // 字段编号从1开始
}

message VerifyTokenReq {
    string token = 1;   // 字段编号从1开始
}

message DeliveryResp {
    string token = 1;   // 字段编号从1开始
}

message VerifyResp {
    bool res = 1;       // 字段编号从1开始
}